--- a/Thesis.tex
+++ b/Thesis.tex
@@ -30,6 +30,8 @@
 \usepackage{appendix}
 
 \newcommand{\p}[3][p]{\ensuremath{#1\!\left({#2}\middle|{#3}\right)}}
+\let\oldCite\cite
+\def\cite#1{~\oldCite{#1}}
 
 \def\figRef#1{Figure~\ref{#1}}
 \def\algRef#1{Algorithm~\ref{#1}}
