--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -8,7 +8,7 @@
 \newacronym{CGAL}{CGAL}{Computational Geometry Algorithms Library}
 \newacronym{AABB}{AABB tree}{Axis-Aligned Bounding Boxes tree}
 \newacronym{ROS}{ROS}{Robot Operating System}
-\newacronym{kdtree}{k-d tree}{k-dimensional tree}
+\newacronym{kdtree}{\textsl{k}d-tree}{\textsl{k}-dimensional tree}
 \newacronym{FLANN}{FLANN}{Fast Library for Approximate Nearest Neighbors}
 \newacronym{ICP}{ICP}{Iterative Closest Point}
 \newacronym{lvr}{LVR Toolkit}{Las Vegas Reconstruction Toolkit}
