--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,11 @@
 \documentclass[Thesis.tex]{subfiles}
 \begin{document}
-%Robot localization in known environments is an important topic: Often it can be of great importance that a robot finds its position (or even its full pose) very quickly.
+
+Robot localization in known environments is an important topic, especially in the field of mobile robotics. Whenever a robot is turned on or relocated, it has to (re)locate itself in its environment. Several approaches exist for robots to find their three-dimensional pose in two dimensional raster maps. A popular algorithm for the localization task is the \gls{AMCL} which is described in details by Thrun et. al.\cite{ThrunBurgardFox:2005}. A localization is successful when the robot found its current three dimensional pose, that is its two dimensional position and its one dimensional orientation.
+
+Mobile robots have to work not only in two, but also in three dimensional environments. This means they can have six dimensional poses because their position consists of three dimensions and so does their orientation. In this thesis I will derive an algorithm based on \gls{AMCL} to solve the localization problem in such three dimensional environments and finding the six dimensional pose. Therefor I will no longer use raster maps but polygon meshes as continuous maps. For the sensor model I will use a ray tracer, which simulates sensor data comparable to real world distance sensors like laser scanners or depth cameras.
+
+After deriving the algorithm and running some simulations with it, I will take a look out about how the algorithm can be developed further.
 %
 %A common approach to this is to use some kind of Monte Carlo or Markov localization in a 2D-map, e.g. by the use of a laser scanner. To illustrate this, imagine a robot getting sensor information about walls and corners around him, maybe a door as well, which helps it to determine his current position. More technically the classical Markov 2D algorithm divides the map into discrete cells which get assigned with equal probabilities. Those prior probabilities get updated according to the robot's sensory input until they converge to a specific cell. The traditional Monte Carlo approach improves this behavior by implementing a particle filter which is no longer dependent on a discrete cell structure. Both approaches however have some problems, one example is that there might be ambiguous positions.
 %
@@ -16,6 +21,7 @@
 %
 %After deriving the algorithm and testing it, I will take a look out about how the approach might be of use and how one could possibly improve it.
 
-\todo[inline]{Renew abstract}
+
+\glsresetall
 
 \end{document}
