--- a/future.tex
+++ b/future.tex
@@ -8,11 +8,11 @@ One element of \gls{AMCL} was left out in \gls{AMCL6D}: The dynamic respawn rate
 
 \subsection*{Ray tracer}
 
-The ray tracer is the slowest factor in the algorithm. This might have two reasons, either it is because of its design as a \gls{ROS} service node or the speed of \gls{CGAL}. Improvements might be possible by implementing the ray tracer into the same node as \gls{AMCL6D} or by replacing the \gls{CGAL} ray tracer with a faster library. A smaller resolution might also be sufficient for the sensor model which would reduce the amount of computations for the ray tracer vastly. However, it needs to be shown if the results are better using an approach with lower or higher resolutions.
+The ray tracer is the slowest factor in the algorithm. This might have two\todo{Evaluate and prove it's CGAL?!?} reasons, either it is because of its design as a \gls{ROS} service node or the speed of \gls{CGAL}. Improvements might be possible by implementing the ray tracer into the same node as \gls{AMCL6D} or by replacing the \gls{CGAL} ray tracer with a faster library. A smaller resolution might also be sufficient for the sensor model which would reduce the amount of computations for the ray tracer vastly. \todo{I'm checking this, if there's enough time}However, it needs to be shown if the results are better using an approach with lower or higher resolutions.
 
 \subsection*{Evaluation function}
 
-Another very important factor is the evaluation function. As in other applications where likelihoods are derived from comparisons with sensor inputs it is important to find the right evaluation to come up with reasonable values. The method used in \gls{AMCL6D} seemed to be quite reasonable: The average distance between two point clouds would be 0 if they were equal and increases with more points being further away from this baseline. But maybe simply another evaluation function has to be found. It is also possible that the assumptions made to justify \gls{knn} over \gls{ICP} are not valid. 
+Another very important factor is the evaluation function. As in other applications where likelihoods are derived from comparisons with sensor inputs it is important to find the right evaluation to come up with reasonable values. The method used in \gls{AMCL6D} seemed to be quite reasonable: The average distance between two point clouds would be 0 if they were equal and increases with more points being further away from this baseline. But maybe simply another evaluation function has to be found. 
 
 \subsection*{Multiple sensors}
 
