--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,6 +22,7 @@
 \usepackage{todonotes}
 \usepackage{tabularx}
 \usepackage{arydshln}
+\usepackage{booktabs}
 
 \usepackage[acronym, nonumberlist, nomain]{glossaries}
 \makeglossaries
