--- a/algorithm.tex
+++ b/algorithm.tex
@@ -76,7 +76,7 @@ $\eta = \frac{1}{ \sum\limits_{X_{t}}{\left( x.likelihood\ \cdot\ x.probability\
 \end{algorithm}
 Mobile robots have to work in 3D environments. Such environments can be represented by continuous maps in which robots need to be able to locate themselves. The algorithm \glsreset{AMCL6D}\gls{AMCL6D} is designed to solve the localization problem in this kind of maps.
 
-\gls{AMCL6D} is a modification of the \gls{AMCL} algorithm presented in \cite{ThrunBurgardFox:2005}. Three major components are changed: The motion model, the sensor model, and the evaluation function. The motion model (\algRef{alg:motionmodel}) supports motion in six dimensions and updates the pose samples accordingly. The sensor model (\algRef{alg:sensormodel}) is implemented by a ray trace algorithm. This sensor model allows for simulated scan values in the 3D polygon map. Simulated scans are needed for the last changed major component, the evaluation function (\algRef{alg:eval}). The evaluation function employs a \gls{knn} algorithm to determine the average distance of the real sensor data to the sensor model.
+\gls{AMCL6D} is a modification of the \gls{AMCL} algorithm presented in \cite{ThrunBurgardFox:2005}. Three major components are changed: The motion model, the sensor model, and the evaluation function. The motion model (\algRef{alg:motionmodel}) supports motion in six dimensions and updates the pose samples accordingly. The sensor model (\algRef{alg:sensormodel}) is implemented by a ray trace algorithm. This sensor model allows for simulated scan values in the 3D polygon map. Simulated scans are needed for the last changed major component, the evaluation function (\algRef{alg:eval}). The evaluation function employs a \gls{knn} algorithm to determine the average distance of the real sensor data to the sensor model. Additionally the sample respawn mechanism was slightly modified. Instead of keeping a varying amount of samples depending on the overall likelihood, a static amount of samples is kept. However, if new samples need to be spawned, some of them are spawned close to samples with high beliefs instead of being spawned randomly.
 
 Before the iterative \gls{AMCL6D} algorithm starts, the program generates $n$ random samples $X_{t=0}$. They are uniformly distributed across the map, as described in \secRef{sec:init_samples}. Initially every sample gets assigned with a probability of $\nicefrac{1}{n}$. As soon as some motion is detected, \algRef{alg:amcl6d} starts the first iteration and updates the samples $X_{t-1}$ to $X_{t}$.
 
@@ -128,7 +128,7 @@ After any arbitrary time step the pose samples have to be updated according to t
 An illustration can be found at the 2D example in \figRef{fig:2d_noise_sampling}. The initial pose $p_{t-1}$ at time $t-1$ gets updated with the motion $\Delta p$ and the noise drawn from the normal distribution. It is more likely for the final pose $p_t$ to be close to the original motion.
 \begin{figure}[!htp]
   \todo[inline]{add picture}
-  \caption[2D Motion Model]{The motion model updates the pose sample $p$ by adding the motion $\Delta p$ and some normal distributed noise (using the identity matrix $I$ as deviations). The resulting pose is more likely in the red area.}
+  \caption[2D motion model]{The motion model updates the pose sample $p$ by adding the motion $\Delta p$ and some normal distributed noise (using the identity matrix $I$ as deviations). The resulting pose is more likely in the red area.}
   \label{fig:2d_noise_sampling}
 \end{figure}
 %
@@ -176,9 +176,9 @@ The ray tracer used in \gls{AMCL6D} calculates the intersections of rays emanati
 Since the rays are supposed to simulate a camera, they are cast through an image plane. This helps to determine a second point to construct the rays: The image plane will be divided into small cells, depending on the simulated resolution. One ray is cast through each of these cells and for each of them it has to be checked whether it intersects with the map or not. If it does, the intersection point is stored into a point cloud. The ray tracing is illustrated in \figRef{fig:raytrace_scheme}.
 %
 \begin{figure}[!htp]
-  %\includegraphics[width=\columnwidth]{pics/raytrace_scheme}
   \todo[inline]{add picture}
-  \caption{Rays are cast from the robot's position through the image plane.}
+  %\includegraphics[width=\columnwidth]{pics/raytrace_scheme}
+  \caption[Ray tracing]{Rays are cast from the robot's position through the image plane.}
   \label{fig:raytrace_scheme}
 \end{figure}
 %
@@ -196,7 +196,7 @@ Thus, the image plane's corners are $c_{bl}=(y_{min}, z_{min}), c_{br}=(y_{max},
 However, algorithmically it is not necessary to calculate all these points or individual cells. $y_{min/max}, z_{min/max}$ and the cell size of the image plane's cells, $w$ and $h$, are already enough to iterate over the plane and cast a ray for each cell with \algRef{alg:iterate_imageplane}. The resulting intersections are stored into an array of points which is called point cloud.
 %
 \begin{algorithm}[!htp]
-\caption{Iterating the image plane to cast rays through each cell.}
+\caption[Ray tracing]{Iterating the virtual image plane to cast rays through each cell.}
 \label{alg:iterate_imageplane}
 $y = y_{min}$\;
 $z = z_{min}$\;
@@ -212,18 +212,18 @@ $z = z_{min}$\;
 To speed up the intersection checks, the \gls{CGAL} offers the ability to build an \gls{AABB}\label{page:aabb} from the map data\cite{cgal:atw-aabb-14b}. The \gls{AABB} stores the mesh faces of the polygon map in axis-aligned bounding boxes. Axis-aligned bounding boxes are cuboids with all their edges parallel to the corresponding axis of the global coordinate system. They \gls{AABB} organizes them in a tree structure, this makes it faster to process the data. 
 The speed up is achieved by checking for an intersection of the ray with a bounding box before calculating the exact intersection with the encased geometry. Additionally the fact that the bounding boxes are axis-aligned helps with the speed up, it allows for only simple predicate calls\cite{cgal:atw-aabb-14b}.
 \begin{figure}%
-  %\includegraphics[width=\columnwidth]{pics/aabb_ex}%
-  \todo[inline]{add picture}
-  \caption[Axis-aligned bounding box example]{Axis-aligned bounding boxes encasing a simple mesh consisting of three triangles.}%
+  \centering
+  \input{pics/aabbexample}
+  \caption[Axis-aligned bounding boxes]{Axis-aligned bounding boxes encasing a simple mesh consisting of three triangles.}%
   \label{fig:aabb_ex}%
 \end{figure}
 %
 \figRef{fig:raytrace} pictures an example ray trace showing the simulated robot's pose (arrow) and the point cloud which resulted from the ray trace at that pose.
 \begin{figure}[!htp]
-  %\includegraphics[width=\columnwidth]{pics/raytrace_example}
-  \todo[inline]{add picture}
-  \caption[Sample ray trace]{A simulated ray trace sample in an example map.}
-  \label{fig:raytrace}0
+  \centering
+  \includegraphics[width=.75\columnwidth]{pics/example_raytrace}
+  \caption[Sample ray trace]{A simulated ray trace sample.}
+  \label{fig:raytrace}
 \end{figure}
 %
 To be able to compare the point cloud generated by the ray trace with the point cloud from the sensor, they need to be in the same reference frame. This means they both have to be transformed in a way such that their origins are at the same point. \gls{AMCL6D} uses the global origin.
@@ -236,10 +236,10 @@ A = \left(\begin{array}{cccc}
          0    &    0    &    0    &    1
     \end{array}\right)\label{form:affinetransmatrix}
 \end{align}
-$A$ is the matrix which describes the transformation needed from the global origin to the pose. By taking the inverse $A^{-1}$ it is possible to calculate a matrix which describes the opposite: the transformation from the pose back to the origin. This inverted matrix $A^{-1}$ can be applied to each point $p$ in the point cloud result ($\mathcal{P}$) from the ray trace to transform them to positions which are relative to the origin as they were to the pose. Note that the points need to be homogenous, that means they need to be extended with a fourth component which is $1$.
+$A$ is the matrix which describes the transformation needed from the global origin to the pose. By taking the inverse $A^{-1}$ it is possible to calculate a matrix which describes the opposite: the transformation from the pose back to the origin. This inverted matrix $A^{-1}$ can be applied to each point $p$ in the point cloud result ($\mathbb{P}$) from the ray trace to transform them to positions which are relative to the origin as they were to the pose. Note that the points need to be homogenous, that means they need to be extended with a fourth component which is $1$.
 %
 \begin{align}
-  \forall p \in \mathcal{P}: \genfrac{(}{)}{0pt}{0}{p}{1} = A^{-1} \genfrac{(}{)}{0pt}{0}{p}{1}
+  \forall p \in \mathbb{P}: \genfrac{(}{)}{0pt}{0}{p}{1} = A^{-1} \genfrac{(}{)}{0pt}{0}{p}{1}
 \end{align}
 %
 The resulting point cloud can be used to evaluate the corresponding sample in the evaluation function.
@@ -278,7 +278,7 @@ A \gls{kdtree} is a binary tree structure which recursively splits the space and
 The \gls{knn} algorithm is used to find similarities in high dimensional data\cite{flann_pami_2014}. Its purpose is to find the $k$ points of a dataset which are closest to a given point. The most naive version of such an algorithm would just iterate over all points to search the $k$ closest points, \gls{FLANN} takes advantage of the \gls{kdtree} to speed up the calculations. 
 In \gls{AMCL6D} the \gls{knn} algorithm is used as a heuristic to find the distance to the closest point ($k=1$) in the simulated sensor data for each point in the real sensor data. For each sample the mean distance to the real data is calculated.
 
-By inverting the mean distance between the real sensor data and a sample it is possible to come up with a value between $0$ and $1$. This value is inverse proportional to the distance, that means if the distance is huge the value becomes really small, but if the distance is small the value gets closer to $1$. To avoid division by zero in the unlikely but possible case that the measurements have a distance of $0$, the average distance gets initialized with an arbitrary small value $\epsilon \in \mathcal{R} > 0$.
+By inverting the mean distance between the real sensor data and a sample it is possible to come up with a value between $0$ and $1$. This value is inverse proportional to the distance, that means if the distance is huge the value becomes really small, but if the distance is small the value gets closer to $1$. To avoid division by zero in the unlikely but possible case that the measurements have a distance of $0$, the average distance gets initialized with an arbitrary small value $\epsilon \in \mathbb{R} > 0$.
 
 The result of the evaluation function is used as the likelihood for the calculation of a sample's new probability: $x.probability_t = \eta \cdot x.likelihood \cdot x.probability_{t-1}$. $\eta$ is the normalization constant, which is the marginalization over all posterior probabilities (see \lineRef{alg:amcl6d}{alg:geteta}).
 After evaluating the samples, they are sorted by their posterior probabilities. This allows for easier regeneration of poses with low posterior beliefs.
