--- a/glossary_and_acronyms.tex
+++ b/glossary_and_acronyms.tex
@@ -1,6 +1,7 @@
 \newacronym{iid}{i.i.d.}{independent and identically distributed}
 \newacronym{SLAM}{SLAM}{Simultaneous Localization and Mapping}
 \newacronym{AMCL}{AMCL}{Augmented Monte Carlo Localization}
+\newacronym{MCL}{MCL}{Monte Carlo Localization}
 \newacronym{AMCL6D}{AMCL6D}{Augmented Monte Carlo Localization in six dimensions}
 \newacronym{pdf}{PDF}{probability density function}
 \newacronym{cdf}{CDF}{cumulative distribution function}
@@ -8,7 +9,7 @@
 \newacronym{CGAL}{CGAL}{Computational Geometry Algorithms Library}
 \newacronym{AABB}{AABB tree}{Axis-Aligned Bounding Boxes tree}
 \newacronym{ROS}{ROS}{Robot Operating System}
-\newacronym{kdtree}{\textsl{k}d-tree}{\textsl{k}-dimensional tree}
+\newacronym[sort=kd-tree]{kdtree}{\textsl{k}d-tree}{\textsl{k}-dimensional tree}
 \newacronym{FLANN}{FLANN}{Fast Library for Approximate Nearest Neighbors}
 \newacronym{ICP}{ICP}{Iterative Closest Point}
 \newacronym{lvr}{LVR Toolkit}{Las Vegas Reconstruction Toolkit}
